Adding authentication handler for HTTP/2